--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "mk-mongoose-publisher",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "author": "maxbryselbout <max@maxken.fr>",
   "license": "MIT",
   "dependencies": {
     "debug": "^4.1.1",
     "lodash": "^4.17.11",
-    "mongoose": "^5.4.13"
+  },
+  "peerDependencies" : {
+    "mongoose": "^5.2."
   }
 }
