--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^4.1.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.11"
   },
   "peerDependencies" : {
     "mongoose": "^5.2."
